--- a/ProgramacionWEB/ejercicio1/index.html
+++ b/ProgramacionWEB/ejercicio1/index.html
@@ -32,10 +32,11 @@
 
             </select>
         <br><br>
-            <button type="submit">Guardar</button>
+            <button onclick="miFuncion()">Guardar</button>
             <button type="reset">Cancelar</button>
 
     </form>
-    
+    <script src="scripts.js"></script>
+
 </body>
 </html>
