--- a/ProgramacionWEB/TP1 Programacion II/veterinaria/animales/animales.html
+++ b/ProgramacionWEB/TP1 Programacion II/veterinaria/animales/animales.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Lista de Animales</title>
+  <link rel="stylesheet" href="../estilos.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+</head>
+<body>
+  <div class="container">
+    <h2>Listado de Animales</h2>
+    <table class="table" id="tablaAnimales">
+      <thead>
+        <tr>
+          <th>ID</th><th>Nombre</th><th>Raza</th><th>Edad</th><th>Sexo</th><th>Tipo</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+    <div class="text-center mt-4">
+     <a href="../index.html" class="btn btn-secondary">Volver al menú</a>
+    </div>
+  </div>
+  </div>
+  <script src="../js/animales.js"></script>
+  <script>cargarAnimales();</script>
+</body>
+</html>
