--- a/ProgramacionWEB/TP1 Programacion II/veterinaria/index.html
+++ b/ProgramacionWEB/TP1 Programacion II/veterinaria/index.html
@@ -1,27 +1,24 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Veterinaria</title>
-  <link rel="stylesheet" href="estilos.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Veterinaria</a>
-      <div class="collapse navbar-collapse">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item"><a class="nav-link" href="animales.html">Animales</a></li>
-          <li class="nav-item"><a class="nav-link" href="dueños.html">Dueños</a></li>
-          <li class="nav-item"><a class="nav-link" href="atenciones.html">Atenciones</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<!DOCTYPE html> <html lang="es"> <head> <meta charset="UTF-8"> <title>Veterinaria</title> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- CSS local --> <link rel="stylesheet" href="estilos.css"> <!-- Bootstrap CSS --> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> </head> <body> <!-- Menú de navegación --> <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> <div class="container-fluid"> <a class="navbar-brand" href="#">Veterinaria</a> <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuPrincipal" aria-controls="menuPrincipal" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+  <div class="collapse navbar-collapse" id="menuPrincipal">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <!-- Animales -->
+      <li class="nav-item"><a class="nav-link" href="animales/animales.html">Listar Animales</a></li>
+      <li class="nav-item"><a class="nav-link" href="animales/registrarAnimal.html">Registrar Animal</a></li>
+      <li class="nav-item"><a class="nav-link" href="animales/editarAnimal.html">Editar Animal</a></li>
+      <li class="nav-item"><a class="nav-link" href="animales/eliminarAnimal.html">Eliminar Animal</a></li>
 
-  <div class="container mt-5 text-center">
-    <h1>Bienvenidos al Sistema de Gestión Veterinaria</h1>
-    <p class="lead">Aquí podrás gestionar animales, dueños y sus atenciones fácilmente.</p>
+      <!-- Atenciones -->
+      <li class="nav-item"><a class="nav-link" href="atenciones/atenciones.html">Listar Atenciones</a></li>
+      <li class="nav-item"><a class="nav-link" href="atenciones/registrarAtencion.html">Registrar Atención</a></li>
+      <li class="nav-item"><a class="nav-link" href="atenciones/editarAtencion.html">Editar Atención</a></li>
+      <li class="nav-item"><a class="nav-link" href="atenciones/eliminarAtencion.html">Eliminar Atención</a></li>
+
+      <!-- Dueños -->
+      <li class="nav-item"><a class="nav-link" href="dueños/dueños.html">Listar Dueños</a></li>
+      <li class="nav-item"><a class="nav-link" href="dueños/registrarDueño.html">Registrar Dueño</a></li>
+      <li class="nav-item"><a class="nav-link" href="dueños/editarDueño.html">Editar Dueño</a></li>
+      <li class="nav-item"><a class="nav-link" href="dueños/eliminarDueño.html">Eliminar Dueño</a></li>
+    </ul>
   </div>
-</body>
+</div>
+  </nav> <!-- Contenido principal --> <div class="container text-center mt-5"> <h1>Bienvenido al sistema de gestión de la Veterinaria</h1> <p>Usá el menú superior para navegar por las opciones.</p> <img src="https://cdn-icons-png.flaticon.com/512/616/616408.png" alt="Icono veterinaria" width="100"> </div> <!-- Bootstrap Bundle JS --> <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> </body> </html>
